// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiProviderConfig getConfigForCommand with command-specific config 1`] = `
{
  "apiKey": undefined,
  "model": "deepseek-chat",
  "provider": "deepseek",
}
`;

exports[`ApiProviderConfig getConfigForCommand falls back to default provider 1`] = `
{
  "apiKey": "test-key",
  "model": "claude-3-opus",
  "provider": "anthropic",
}
`;

exports[`ApiProviderConfig getConfigForAgent with agent-specific config 1`] = `
{
  "apiKey": "test-key",
  "model": "claude-3-sonnet",
  "provider": "anthropic",
}
`;

exports[`parseOptions prioritizes CLI flags over env vars and config 1`] = `
{
  "apiKey": "cli-key",
  "model": "deepseek-chat-32k",
  "provider": "deepseek",
}
`;

exports[`parseOptions handles multiple config files 1`] = `
{
  "defaultModel": "claude-3-sonnet",
  "defaultProvider": "anthropic",
  "excludeFiles": undefined,
  "providers": {
    "anthropic": {
      "defaultModel": "claude-3-sonnet",
    },
  },
  "rules": [
    "rule1",
    "rule2",
  ],
}
`;

exports[`parseOptions merges environment variables with config 1`] = `
{
  "apiKey": "cli-key",
  "model": "deepseek-chat",
  "provider": "deepseek",
}
`;
